--- a/Python Basics Assignment/Python_Basics_Assignment_1.ipynb
+++ b/Python Basics Assignment/Python_Basics_Assignment_1.ipynb
@@ -1,22 +1,29 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "1. In the below elements which of them are values or an expression? eg:- values can be\n",
     "integer or string and expressions will be mathematical operators.\n",
+    "\n",
     "*\n",
+    "\n",
     "'hello'\n",
+    "\n",
     "-87.8\n",
+    "\n",
     "-\n",
+    "\n",
     "/\n",
+    "\n",
     "+\n",
+    "\n",
     "6"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans: \n",
@@ -25,14 +32,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "2. What is the difference between string and variable?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans.\n",
@@ -42,7 +49,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "3. Describe three different data types."
@@ -50,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +83,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "4. What is an expression made up of? What do all expressions do?"
@@ -84,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +100,7 @@
        "12113"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,15 +118,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. This assignment statements, like spam = 10. What is the difference between an\n",
-    "expression and a statement?"
+    "5. This assignment statements, like spam = 10. What is the difference between an expression and a statement?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans.\n",
@@ -130,7 +136,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "6. After running the following code, what does the variable bacon contain?\n",
@@ -140,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -149,16 +155,6 @@
      "text": [
       "22\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nthe variable bacon contains 22. Here bacon + 1 is not stored in the bacon variable so the value of bacon will not change.\\n'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -166,77 +162,46 @@
     "bacon + 1\n",
     "print(bacon)\n",
     "\n",
-    "\"\"\"\n",
-    "the variable bacon contains 22. Here bacon + 1 is not stored in the bacon variable so the value of bacon will not change.\n",
-    "\"\"\""
+    "\n",
+    "#the variable bacon contains 22. Here bacon + 1 is not stored in the bacon variable so the value of bacon will not change.\n"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "7. What should the values of the following two terms be?\n",
-    "&#39;spam&#39; + &#39;spamspam&#39;\n",
-    "&#39;spam&#39; * 3"
+    "'spam' + 'spamspam'\n",
+    "'spam' * 3"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nAns. \\n'spamspamspam'\\nfor both the expressions, the values will be same.\\n\""
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
     "Ans. \n",
     "'spamspamspam'\n",
-    "for both the expressions, the values will be same.\n",
-    "\"\"\""
+    "for both the expressions, the values will be same."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "8. Why is eggs a valid variable name while 100 is invalid?"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nAns. \\nThe variable name can not start with number, special character except _.\\nAlso a number can not be assigned to another number.\\n'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
     "Ans. \n",
     "The variable name can not start with number, special character except _.\n",
-    "Also a number can not be assigned to another number.\n",
-    "\"\"\""
+    "Also a number can not be assigned to another number."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "9. What three functions can be used to get the integer, floating-point number, or string version of a value?"
@@ -244,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +234,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "10. Why does this expression cause an error? How can you fix it?\n",
@@ -278,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
